# stack-vm-cpp

./: CMakeLists.txt  CMakePresets.json  Lexer.cpp  OVERVIEW.md  PIPELINE.md  Parser.cpp  StackVM.cpp  main.cpp
include/: lexer.h  vm.h
src/: CMakeLists.txt  lexer.cpp  main.cpp  parser.cpp  vm.cpp
tests/: CMakeLists.txt  lexer_tests.cpp  parser_tests.cpp  run_tests.sh
